fixed sizing of audio player on narrow-width devices

--- a/assets/css/audio.css
+++ b/assets/css/audio.css
@@ -67,59 +67,75 @@
 
 /* Seeker Bar Styles */
 /**********************************/
-input[type="range"] {
+input[type='range'] {
   -webkit-appearance: none;
   background: transparent;
 }
-input[type="range"]::-webkit-slider-runnable-track {
+input[type='range']::-webkit-slider-runnable-track {
   height: 2px;
   cursor: pointer;
-  background: linear-gradient(to right, rgba(65, 225, 225, 0.6) 0%, rgba(225, 65, 172, 0.6) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(65, 225, 225, 0.6) 0%,
+    rgba(225, 65, 172, 0.6) 100%
+  );
 }
-input[type="range"]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
   height: 15px;
   width: 15px;
   border-radius: 25px;
-  background: linear-gradient(to right, rgba(65, 225, 225, 0.6) 0%, rgba(225, 65, 172, 0.6) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(65, 225, 225, 0.6) 0%,
+    rgba(225, 65, 172, 0.6) 100%
+  );
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -7px;
 }
-input[type="range"]::-moz-range-track {
+input[type='range']::-moz-range-track {
   height: 2px;
   cursor: pointer;
-  background: linear-gradient(to right, rgba(65, 225, 225, 0.6) 0%, rgba(225, 65, 172, 0.6) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(65, 225, 225, 0.6) 0%,
+    rgba(225, 65, 172, 0.6) 100%
+  );
 }
-input[type="range"]::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   box-shadow: 0px 0px 0px #000000;
   border: none;
   height: 15px;
   width: 15px;
   border-radius: 25px;
-  background: linear-gradient(to right, rgba(65, 225, 225, 0.6) 0%, rgba(225, 65, 172, 0.6) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(65, 225, 225, 0.6) 0%,
+    rgba(225, 65, 172, 0.6) 100%
+  );
   cursor: pointer;
 }
-input[type="range"]::-ms-track {
+input[type='range']::-ms-track {
   height: 2px;
   cursor: pointer;
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
-input[type="range"]::-ms-fill-lower {
+input[type='range']::-ms-fill-lower {
   background: white;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
 }
-input[type="range"]::-ms-fill-upper {
+input[type='range']::-ms-fill-upper {
   background: white;
   border: 0px solid #000000;
   border-radius: 2px;
   box-shadow: 0px 0px 0px #000000;
 }
-input[type="range"]::-ms-thumb {
+input[type='range']::-ms-thumb {
   margin-top: 1px;
   box-shadow: 0px 0px 0px #000000;
   border: none;
@@ -133,7 +149,7 @@ input[type="range"]::-ms-thumb {
 /* Media Queries */
 /************************/
 
-/*If height > width*/
+/*If height >= width */
 @media (max-aspect-ratio: 1/1) {
   #audio-container {
     width: 70%;
@@ -151,7 +167,15 @@ input[type="range"]::-ms-thumb {
   }
 }
 
-/*If wider than 16:9*/
+/* If height >= 120% of width and width is <= 500px */
+@media (max-aspect-ratio: 4/5) and (max-width: 500px) {
+  #audio-container {
+    width: 90%;
+    margin-left: 5%;
+  }
+}
+
+/*If aspect ratio is 16:9 or wider */
 @media (min-aspect-ratio: 16/9) {
   .audio-player {
     height: 15vh;
